--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>untitled-x</title>
   </head>
-  <body>
-    <p>aware</p>
+<body>
+	<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+		<p style="text-align: center;">aware</p>
+	</div>
   </body>
 </html>
