--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <title>untitled-x</title>
+	<link rel="shortcut icon" href="icons/donotdisturb.png" />
+    <title> x-verse </title>
   </head>
 <body>
 	<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
 		<p style="text-align: center;">aware</p>
 	</div>
+	<!-- <a href="drawings.html"></a></a>
+		<img src="icons/hand0.png" alt="doodling" onmouseover="this.src='icons/hand1.png'" onmouseout="this.src='icons/hand0.png'">
+	</a> -->
+
   </body>
 </html>
