--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-	<link rel="shortcut icon" href="icons/donotdisturb.png" />
+	<link rel="shortcut icon" href="icons/donotdisturb.ico" />
     <title> x-verse </title>
   </head>
 <body>
