--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
 	<link rel="shortcut icon" href="icons/donotdisturb.ico" />
     <title> x-verse </title>
+
+	<link rel="stylesheet" type="text/css" href="static/style.css">
+
   </head>
 <body>
 	<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
