--- a/drawings.html
+++ b/drawings.html
@@ -3,6 +3,7 @@
   <head>
 	<link rel="shortcut icon" href="icons/hand1.png" />
     <title> doodling </title>
+    <link rel="stylesheet" type="text/css" href="static/style.css">
   </head>
 <body>
     <div style="position: absolute; top: 0; left: 0;">
