--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 
   </head>
 <body>
-	<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+	<div style="display: flex; justify-content: center; align-items: center; height: 10vh;">
 		<p style="text-align: center;">aware</p>
 	</div>
-	<!-- <a href="drawings.html"></a></a>
-		<img src="icons/hand0.png" alt="doodling" onmouseover="this.src='icons/hand1.png'" onmouseout="this.src='icons/hand0.png'">
-	</a> -->
+	<div style="display: flex; justify-content: center; align-items: center; height: 50vh;">
+		<a href="aboutme.html">
+			<img src="icons/aboutme0.png" alt="doodling" onmouseover="this.src='icons/aboutme1.png'" onmouseout="this.src='icons/aboutme0.png'" style="width: 50px; height: auto;">
+		</a>
+	</div>
 
   </body>
 </html>
