--- a/photos.html
+++ b/photos.html
@@ -2,7 +2,8 @@
 <html>
   <head>
 	<link rel="shortcut icon" href="icons/camera1.png" />
-    <title> blinking </title>
+  <title> blinking </title>
+  <link rel="stylesheet" type="text/css" href="static/style.css">
   </head>
 <body>
     <div style="position: absolute; top: 0; left: 0;">
