--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 
   </head>
 <body>
-	<div style="display: flex; justify-content: center; align-items: center; height: 10vh;">
+	<!-- <div style="display: flex; justify-content: center; align-items: center; height: 10vh;">
 		<p style="text-align: center;">aware</p>
-	</div>
-	<div style="display: flex; justify-content: center; align-items: center; height: 50vh;">
+	</div> -->
+	<div style="display: flex; justify-content: center; align-items: center; height: 10vh;">
 		<a href="aboutme.html">
-			<img src="icons/aboutme0.png" alt="doodling" onmouseover="this.src='icons/aboutme1.png'" onmouseout="this.src='icons/aboutme0.png'" style="width: 50px; height: auto;">
+			<img src="icons/aboutme0.png" alt="about me" onmouseover="this.src='icons/aboutme1.png'" onmouseout="this.src='icons/aboutme0.png'" style="width: 50px; height: auto;">
 		</a>
 	</div>
-
+	<div style="display: flex; justify-content: center; align-items: center; height: 10vh;">
+		<a href="writings.html">
+			<img src="icons/mouth0.png" alt="rambling" onmouseover="this.src='icons/mouth1.png'" onmouseout="this.src='icons/mouth0.png'" style="width: 50px; height: auto;">
+		</a>
+	</div>
+	
   </body>
 </html>
