added more icons

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,8 +12,9 @@
         </a>
     </div>
 	<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-		<p style="text-align: center;">hi i'm xintong. my name means dawn and red (clouds). 
-            i just completed a master's program in robotics, systems and control at eth zurich. 
+		<p style="text-align: center;">hi i'm 昕彤. my name means dawn and red (clouds). i am currently conducting research in the field of human computer interaction.
+            i completed my master's in robotics, systems and control at eth zurich, and bacholer's in electrical engineering at rice univeristy. 
+            before moving to zurich i worked as a systems engineer at nasa johnson space center. i love charcoal, 16mm, and 35mm
         </p>
 	</div>
   </body>
