--- a/photos.html
+++ b/photos.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-	<link rel="shortcut icon" href="icons/camera1.png" />
+	<link rel="shortcut icon" href="icons/eye0.png" />
   <title> blinking </title>
   <link rel="stylesheet" type="text/css" href="static/style.css">
   </head>
