--- a/index.html
+++ b/index.html
@@ -11,15 +11,23 @@
 	<!-- <div style="display: flex; justify-content: center; align-items: center; height: 10vh;">
 		<p style="text-align: center;">aware</p>
 	</div> -->
-	<div style="display: flex; justify-content: center; align-items: center; height: 10vh;">
-		<a href="aboutme.html">
-			<img src="icons/aboutme0.png" alt="about me" onmouseover="this.src='icons/aboutme1.png'" onmouseout="this.src='icons/aboutme0.png'" style="width: 50px; height: auto;">
-		</a>
-	</div>
-	<div style="display: flex; justify-content: center; align-items: center; height: 10vh;">
-		<a href="writings.html">
-			<img src="icons/mouth0.png" alt="rambling" onmouseover="this.src='icons/mouth1.png'" onmouseout="this.src='icons/mouth0.png'" style="width: 50px; height: auto;">
-		</a>
+
+	<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
+		<div>
+			<a href="aboutme.html">
+				<img src="icons/aboutme0.png" alt="about me" onmouseover="this.src='icons/aboutme1.png'" onmouseout="this.src='icons/aboutme0.png'" style="width: 50px; height: auto;">
+			</a>
+		</div>
+		<div>
+			<a href="writings.html">
+				<img src="icons/eye0.png" alt="blinking" onmouseover="this.src='icons/eye1.png'" onmouseout="this.src='icons/eye0.png'" style="width: 50px; height: auto;">
+			</a>
+		</div>
+		<div>
+			<a href="writings.html">
+				<img src="icons/mouth0.png" alt="rambling" onmouseover="this.src='icons/mouth1.png'" onmouseout="this.src='icons/mouth0.png'" style="width: 50px; height: auto;">
+			</a>
+		</div>
 	</div>
 	
   </body>
