--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
 	<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
 		<div>
-			<a href="aboutme.html">
+			<a href="pages/aboutme.html">
 				<img src="icons/aboutme0.png" alt="about me" onmouseover="this.src='icons/aboutme1.png'" onmouseout="this.src='icons/aboutme0.png'" style="width: 50px; height: auto;">
 			</a>
 		</div>
 		<div>
-			<a href="writings.html">
+			<a href="pages/photos.html">
 				<img src="icons/eye0.png" alt="blinking" onmouseover="this.src='icons/eye1.png'" onmouseout="this.src='icons/eye0.png'" style="width: 50px; height: auto;">
 			</a>
 		</div>
 		<div>
-			<a href="writings.html">
-				<img src="icons/mouth0.png" alt="rambling" onmouseover="this.src='icons/mouth1.png'" onmouseout="this.src='icons/mouth0.png'" style="width: 50px; height: auto;">
+			<a href="pages/drawings.html">
+				<img src="icons/mouth0.png" alt="doodling" onmouseover="this.src='icons/mouth1.png'" onmouseout="this.src='icons/mouth0.png'" style="width: 50px; height: auto;">
 			</a>
 		</div>
 	</div>
