--- a/pages/drawings.html
+++ b/pages/drawings.html
@@ -11,8 +11,8 @@
             <img src="../icons/donotdisturb.png" alt="home" style="width: 40px; height: 40px;" />
         </a>
     </div>
-	<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-		<p style="text-align: center;">insert drawings here</p>
-	</div>
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; flex-direction: column;">
+      <img src="../media/drawings/baby.png" alt="profile" style="height: 600px; display: block; margin: 0 auto;">
+    </div>
   </body>
 </html>
