updated photo menu

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -13,7 +13,7 @@
     </div>
     <div style="display: flex; justify-content: center; align-items: center; height: 100vh; flex-direction: column;">
       <div>
-        <img src="../media/photos/profile/urinal.jpeg" alt="profile" style="height: 200px; display: block; margin: 0 auto;">
+        <img src="../media/photos/profile/pizza.jpg" alt="profile" style="height: 200px; display: block; margin: 0 auto;">
       </div>
       <br>
       <p style="text-align: center;">
