--- a/pages/photos.html
+++ b/pages/photos.html
@@ -23,22 +23,22 @@
         <div class="gallery">
           <div class="gallery-item">
             <a href="portraits.html">
-            <img src="../media/photos/photo_0.png" alt="">
+            <img src="../media/photos/cover_portraits.png" alt="">
             </a>
           </div>
           <div class="gallery-item">
             <a href="asia.html">
-            <img src="../media/photos/qingcheng_1.jpg" alt="">
+            <img src="../media/photos/cover_asia.png" alt="">
             </a>
           </div>
           <div class="gallery-item">
             <a href="america.html">
-            <img src="../media/photos/houston_3.png" alt="">
+            <img src="../media/photos/cover_america.png" alt="">
             </a>
           </div>
           <div class="gallery-item">
             <a href="europe.html">
-            <img src="../media/photos/happy_hour.jpg" alt="">
+            <img src="../media/photos/cover_europe.png" alt="">
             </a>
           </div>
         </div>
