--- a/pages/drawings.html
+++ b/pages/drawings.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-	<link rel="shortcut icon" href="../icons/hand0.png" />
+	<link rel="shortcut icon" href="../icons/mouth0.png" />
     <title> doodling </title>
     <link rel="stylesheet" type="text/css" href="../static/style.css">
   </head>
