--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</div> -->
 
 	<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
-		<div>
+		<!-- <div>
 			<a href="pages/aboutme.html">
 				<img src="icons/aboutme0.png" alt="about me" onmouseover="this.src='icons/aboutme1.png'" onmouseout="this.src='icons/aboutme0.png'" style="width: 50px; height: auto;">
 			</a>
@@ -26,6 +26,21 @@
 		<div>
 			<a href="pages/drawings.html">
 				<img src="icons/mouth0.png" alt="doodling" onmouseover="this.src='icons/mouth1.png'" onmouseout="this.src='icons/mouth0.png'" style="width: 50px; height: auto;">
+			</a>
+		</div> -->
+		<div class="index_tree">
+			<img src="icons/tree.png" class="tree">
+			<a href="pages/aboutme.html">
+				<img src="icons/aboutme0.png" alt="doodling" onmouseover="this.src='icons/aboutme1.png'" 
+				onmouseout="this.src='icons/aboutme0.png'" class="leaves" id="leaf1" style="width: 50px; height: auto;">
+			</a>
+			<a href="pages/photos.html">
+				<img src="icons/eye0.png" alt="doodling" onmouseover="this.src='icons/eye1.png'" 
+				onmouseout="this.src='icons/eye0.png'" class="leaves" id="leaf2" style="width: 50px; height: auto;">
+			</a>
+			<a href="pages/drawings.html">
+				<img src="icons/mouth0.png" alt="doodling" onmouseover="this.src='icons/mouth1.png'" 
+				onmouseout="this.src='icons/mouth0.png'" class="leaves" id="leaf3" style="width: 50px; height: auto;">
 			</a>
 		</div>
 	</div>
