--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -12,12 +12,16 @@
         </a>
     </div>
     <div style="display: flex; justify-content: center; align-items: center; height: 100vh; flex-direction: column;">
+      <p style="text-align: center;">
+      昕彤
+      <br>
+      </p>
       <div>
         <img src="../media/photos/profile/pizza.jpg" alt="profile" style="height: 200px; display: block; margin: 0 auto;">
       </div>
       <br>
       <p style="text-align: center;">
-        Hi my name is Xintong. 昕彤 means dawn and red (clouds) in Chinese. I am currently conducting research in Human Computer Interaction at ETH Zurich.
+        Hi my name is Xintong. I am a researcher in Human Computer Interaction.
         <br><br>
         I am passionate about creating tangible technology that inspires people, blending my interest in art and engineering.
         <br><br>
