--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
 	<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
 		<div class="image-container">
 			<a href="pages/aboutme.html">
-				<img src="icons/aboutme0.png" alt="about me" onmouseover="this.src='icons/aboutme1.png'" 
+				<!-- <img src="icons/eye0.png" alt="about" onmouseover="this.src='icons/eye2.png'"  -->
+				<img src="icons/aboutme0.png" alt="about" onmouseover="this.src='icons/aboutme1.png'" 
 				onmouseout="this.src='icons/aboutme0.png'" style="width: 50px; height: auto;">
 			</a>
-			<span class="hover-text">about me</span>
+			<span class="hover-text">about</span>
 		</div>
 		<div class="image-container">
-			<a href="pages/photos.html">
-				<img src="icons/eye0.png" alt="blinking" onmouseover="this.src='icons/eye1.png'" 
+			<a href="pages/projects.html">
+				<img src="icons/eye0.png" alt="blinking" onmouseover="this.src='icons/eye2.png'" 
 				onmouseout="this.src='icons/eye0.png'" style="width: 50px; height: auto;">
 			</a>
-			<span class="hover-text">photos</span>
+			<span class="hover-text">projects</span>
 		</div>
 		<div class="image-container">
-			<a href="pages/drawings.html">
-				<img src="icons/mouth0.png" alt="doodling" onmouseover="this.src='icons/mouth1.png'" 
+			<a href="pages/contact.html">
+				<img src="icons/mouth0.png" alt="chat" onmouseover="this.src='icons/mouth1.png'" 
 				onmouseout="this.src='icons/mouth0.png'" style="width: 50px; height: auto;">
 			</a>
-			<span class="hover-text">drawings</span>
+			<span class="hover-text">contact</span>
 		</div>
 		<!-- <div class="index_tree">
 			<img src="icons/tree.png" class="tree">
