--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -21,12 +21,15 @@
       </div>
       <br>
       <p style="text-align: center;">
-        Hi my name is Xintong. I am a researcher in Human Computer Interaction.
+        Hi, I’m Xintong—a polymath engineer passionate about human-computer interaction, audio signal processing, and visual art. 
+        I create tangible technologies that inspire, blending art and engineering into seamless experiences.
         <br><br>
-        I am passionate about creating tangible technology that inspires people, blending my interest in art and engineering.
-        <br><br>
-        This website is an online gallery for my analog photos and drawings.
+        Previously, I was a research assistant at <a href="https://siplab.org">SIPLab</a> at ETH Zurich, where I completed my master's in robotics. 
+        Before that, I spent two years as a systems engineer at <a href="https://technology.nasa.gov/patent/MSC-TOPS-60">ARGOS</a>, 
+        a gravity simulator at NASA Johnson Space Center's robotics branch. 
       </p>
     </div>
   </body>
+
+
 </html>
